# sqlalchemy-odata

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  release-please-config.json  renovate.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pr-title.yml  release-please.yml
src/shillelagh_odata/: __init__.py  adapter.py  dialect.py  engine_spec.py
tests/: test_adapter.py
